HHH-14872 - Re-enable hibernate-gradle-plugin
plus additional improvements to Gradle scripts